tests-integration/tests/roundtrip/invalid/semantic/typecheck/mismatched_inequality_set_matrix/input.essence
letting x be {1, 2}
find y : matrix indexed by [int(1..5), int(1..5)] of int(1..9)
such that x != y